force-app/main/default/objects/Contact/fields/Second_Choice_Language__c.field-meta.xml
<CustomField>
    <fullName>Second_Choice_Language__c</fullName>
    <inlineHelpText>This will be used to display study information when your Preferred Language is not available.</inlineHelpText>
    <label>2nd Choice Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>