force-app/main/default/objects/Contact/fields/SecondChoiceLanguage__c.field-meta.xml
<CustomField>
    <fullName>SecondChoiceLanguage__c</fullName>
    <inlineHelpText>This will be used to display study information when your Preferred Language is not available.</inlineHelpText>
    <label>2nd Choice Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>ru</fullName>
                <label>Русский</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>