force-app/main/default/objects/Contact/fields/Show_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Show_Instructions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Instructions</label>
    <type>Checkbox</type>
</CustomField>