force-app/main/default/objects/Contact/fields/SitesInterested__c.field-meta.xml
<CustomField>
    <fullName>SitesInterested__c</fullName>
    <label>Sites Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>TestSite</fullName>
                <default>true</default>
                <label>TestSite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>