force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>