force-app/main/default/objects/Contact/fields/Suppress_Physician_Outreach_Email__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Physician_Outreach_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Physician Outreach Email</label>
    <type>Checkbox</type>
</CustomField>