force-app/main/default/objects/Contact/fields/Third_Choice_Language__c.field-meta.xml
<CustomField>
    <fullName>Third_Choice_Language__c</fullName>
    <inlineHelpText>This will be used to display study information when your other two choices are not available.</inlineHelpText>
    <label>3rd Choice Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Languages</valueSetName>
    </valueSet>
</CustomField>