force-app/main/default/objects/Contact/fields/TopicsInterested__c.field-meta.xml
<CustomField>
    <fullName>TopicsInterested__c</fullName>
    <label>Topics Interested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestTopic</fullName>
                <default>true</default>
                <label>TestTopic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>