force-app/main/default/objects/Contact/fields/Trials_in_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Trials_in_Last_12_Months__c</fullName>
    <inlineHelpText>How many clinical trials has the physician participated in the last 12 months?</inlineHelpText>
    <label>Trials in Last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>

    <type>Number</type>
</CustomField>