force-app/main/default/objects/Contact/fields/Type_of_Affiliate_Organization__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Affiliate_Organization__c</fullName>
    <inlineHelpText>Acute care or long term hospital, office, psychiatric facility, etc</inlineHelpText>
    <label>Classification</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Outpatient Center</fullName>
            </value>
            <value>
                <fullName>Correctional Facility</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Healthcare Information Technology</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Elder Care</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Work place Wellness</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Veterinary Medicine</fullName>
            </value>
            <value>
                <fullName>Acute Care</fullName>
                <isActive>false</isActive>
                <label>Acute Care</label>
            </value>
            <value>
                <fullName>Long Term Hospital</fullName>
                <isActive>false</isActive>
                <label>Long Term Hospital</label>
            </value>
            <value>
                <fullName>Office</fullName>
                <isActive>false</isActive>
                <label>Office</label>
            </value>
            <value>
                <fullName>Psychiatric Facility</fullName>
                <isActive>false</isActive>
                <label>Psychiatric Facility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>