force-app/main/default/objects/Contact/fields/Unread_Conversation_Count__c.field-meta.xml
<CustomField>
    <fullName>Unread_Conversation_Count__c</fullName>
    <label>Unread Conversation Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>