force-app/main/default/objects/Contact/fields/userCommunity_ShowTour__c.field-meta.xml
<CustomField>
    <fullName>userCommunity_ShowTour__c</fullName>
    <defaultValue>&quot;PI;HCP;Participant&quot;</defaultValue>
    <label>User Community Show Tour</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>