force-app/main/default/objects/Contact/fields/userCommunityDelegateId__c.field-meta.xml
<CustomField>
    <fullName>userCommunityDelegateId__c</fullName>
    <label>User Community Delegate Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>