force-app/main/default/objects/Contact/fields/UserCommunityIsDelegate__c.field-meta.xml
<CustomField>
    <fullName>UserCommunityIsDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Community Is Delegate</label>

    <type>Checkbox</type>
</CustomField>