force-app/main/default/objects/Contact/fields/userCommunityMode__c.field-meta.xml
<CustomField>
    <fullName>userCommunityMode__c</fullName>
    <description>Current view point for Community</description>
    <label>User Community Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>