force-app/main/default/objects/Contact/fields/userCommunytyType__c.field-meta.xml
<CustomField>
    <fullName>userCommunytyType__c</fullName>
    <description>User types for community - HCP / PI / Participant</description>
    <inlineHelpText>Select user types for community</inlineHelpText>
    <label>User Community Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Delegate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>