force-app/main/default/objects/Contact/fields/Visit_Results_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Visit_Results_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Results Opt In</label>
    <type>Checkbox</type>
</CustomField>