force-app/main/default/objects/Contact/fields/Visited_Communities__c.field-meta.xml
<CustomField>
    <fullName>Visited_Communities__c</fullName>
    <label>Visited Communities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA Patient Portal</fullName>
            </value>
            <value>
                <fullName>GSK Pan Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>