force-app/main/default/objects/Contact/recordTypes/MASTER.recordType-meta.xml
<RecordType>
    <fullName>MASTER</fullName>
    <active>true</active>
    <label>MASTER</label>
</RecordType>