force-app/main/default/objects/Contact/listViews/RP_Invited_By_PI.listView-meta.xml
<ListView>
    <fullName>RP_Invited_By_PI</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RP_Invited_By_PI__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_First_Logon__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>RP Invited By PI</label>
</ListView>